--- a/index.html
+++ b/index.html
@@ -1400,7 +1400,7 @@ h1, h2, h3, h4{
   <div class="container">
     <div class="video-container" data-aos="fade-up">
       <iframe 
-        src="https://www.youtube.com/embed/dQw4w9WgXcQ" 
+        src="https://youtu.be/2c17CDTm-bI?si=tIEWLjYGbztnpT79" 
         title="Video Player" 
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
         allowfullscreen>
@@ -1948,7 +1948,7 @@ h1, h2, h3, h4{
     
     <div class="footer-bottom">
       <div class="footer-copyright">
-        © 2024 Morgan Gillis. All rights reserved.
+        © 2026 Morgan Gillis. All rights reserved.
       </div>
       <div class="footer-socials">
         <a href="#" class="social-link">📷</a>
